# midas

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  download_dogma.sh  download_prep_dogma.sh  index.rst  mkdocs.yml  pyproject.toml  run.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: test.yml
comparison/: bbknn.ipynb  bbknn.r  embed2umap.ipynb  embed2umap.r  harmony+wnn.ipynb  harmony+wnn.r  liger+wnn.ipynb  liger+wnn.r  midas_embed.ipynb  midas_embed.r  midas_feat+wnn.ipynb  midas_feat+wnn.r  mofa.ipynb  mofa.r  pca+wnn.ipynb  pca+wnn.r  scanorama_embed+wnn.ipynb  scanorama_embed+wnn.r  scanorama_feat+wnn.ipynb  scanorama_feat+wnn.r  scmomat1.ipynb  scmomat1.py  scmomat2.ipynb  scmomat2.r  scvaeit.ipynb  scvaeit.r  seurat+wnn.ipynb  seurat+wnn.r  seurat_cca+wnn.ipynb  seurat_cca+wnn.r  seurat_rpca+wnn.ipynb  seurat_rpca+wnn.r  stabmap.ipynb  stabmap.r  stabmap_yaowen.R  vis_z_atlas.ipynb  vis_z_atlas.r  vis_z_bm_sota.ipynb  vis_z_bm_sota.r  vis_z_label_transfer.ipynb  (+17 more)
configs/: adt_rna_correspondence.csv  data.toml  model.toml
data/: download_prep_dogma.sh  prep_wnn.sh
data/raw/atac+adt/asap/BM/label_seurat/: l1.csv  l2.csv
data/raw/atac+rna+adt/dogma/dig_ctrl/label_seurat/: l1.csv  l1_vt.csv  l1_vt1.csv  l1_vt2.csv  l2.csv  l3.csv
data/raw/atac+rna+adt/dogma/dig_stim/label_seurat/: l1.csv  l1_vt.csv  l1_vt1.csv  l1_vt2.csv  l2.csv  l3.csv
data/raw/atac+rna+adt/dogma/lll_ctrl/label_seurat/: l1.csv  l1_vt2.csv  l2.csv  l3.csv
data/raw/atac+rna+adt/dogma/lll_stim/label_seurat/: l1.csv  l1_vt.csv  l1_vt1.csv  l2.csv  l3.csv
data/raw/atac+rna+adt/tea/TEA-seq/w1/label_seurat/: l1.csv  l2.csv  l3.csv
data/raw/atac+rna+adt/tea/TEA-seq/w3/label_seurat/: l1.csv  l2.csv  l3.csv
data/raw/atac+rna+adt/tea/TEA-seq/w4/label_seurat/: l1.csv  l2.csv  l3.csv
data/raw/atac+rna+adt/tea/TEA-seq/w5/label_seurat/: l1.csv  l2.csv  l3.csv
data/raw/atac+rna+adt/tea/TEA-seq/w6/label_seurat/: l1.csv  l2.csv  l3.csv
data/raw/rna+adt/bm/label_seurat/: l1.csv  l2.csv
data/raw/rna/ica/label_seurat/: l1.csv  l2.csv
docs/: .readthedocs.yaml  Makefile  index.md
docs/source/: conf.py  extend.rst  finetuning_tips.md  functions.rst  index.rst  install.md  installation.md  modules.rst  quick_start.rst  release.md  requirements.txt  scmidas.rst  tree2.txt  tutorials.rst
docs/source/modules/: modules_index.rst  scmidas.api.rst  scmidas.config.rst  scmidas.data.rst  scmidas.datasets.rst  scmidas.model.rst  scmidas.nn.rst  scmidas.plot.rst  scmidas.utils.rst
docs/source/notebooks/: tutorial_1.ipynb  tutorial_2.ipynb  tutorial_3.ipynb
docs/source/tutorials/: demo1.ipynb  tutorial_index.rst
docs/source/tutorials/advanced/: development_instructions.rst  index.rst  multi_gpu.rst  tensorboard.rst
docs/source/tutorials/basics/: data_layout.rst  demo1.ipynb  demo2.ipynb  demo3.ipynb  index.rst  inputs.rst  outputs.rst  preparing_your_data.ipynb  wnn_bimodal.R  wnn_trimodal.R
eval/: benchmark_batch_bio.ipynb  benchmark_batch_bio.py  benchmark_continual.ipynb  benchmark_continual.py  benchmark_continual_bm.ipynb  benchmark_continual_bm.py  benchmark_mod.ipynb  benchmark_mod.py  benchmark_transfer.ipynb  benchmark_transfer.py  combine_metrics_bm.ipynb  combine_metrics_bm.py  combine_metrics_scib.ipynb  combine_metrics_scib.py  combine_metrics_scib_single.ipynb  combine_metrics_scib_single.py  combine_metrics_scib_temp.ipynb  combine_metrics_scib_temp.py  combine_metrics_scmib.ipynb  combine_metrics_scmib.py  eval_downstream.ipynb  eval_downstream.py  evaluate_bmnc.R  plot_lt_confusion.ipynb  plot_lt_confusion.r  show_curve.py
eval/plot/: knit_table.R  plot.ipynb  plot.r  plot_compare_bimodal.ipynb  plot_compare_bimodal.r  plot_compare_mosaic.ipynb  plot_compare_mosaic.r  plot_compare_transfer.ipynb  plot_compare_transfer.r  plot_mosaic_label_consistency.ipynb  plot_mosaic_label_consistency.r
examples/: quickstart.ipynb
modules/: datasets.py  models.py  utils.py
preprocess/: annotate_seurat.R  annotate_seurat.ipynb  annotate_seurat_adt.ipynb  annotate_seurat_all.ipynb  annotate_singler.R  atac+adt_asap_bm.ipynb  atac+adt_asap_ctrl.R  atac+adt_asap_stim.R  atac+rna+adt_dogma_dig_ctrl.R  atac+rna+adt_dogma_dig_stim.R  atac+rna+adt_dogma_lll_ctrl.R  atac+rna+adt_dogma_lll_stim.R  atac+rna+adt_tea_w1.R  atac+rna+adt_tea_w3.R  atac+rna+adt_tea_w4.R  atac+rna+adt_tea_w5.R  atac+rna+adt_tea_w6.R  atac+rna_10x_multiome_arc1_10k.R  atac+rna_10x_multiome_arc1_3k.R  atac+rna_10x_multiome_arc2_10k.R  atac+rna_10x_multiome_arc2_3k.R  atac+rna_10x_multiome_chrom_c_10k.R  atac+rna_10x_multiome_chrom_x_10k.R  atac+rna_sea_bm_cd34.ipynb  atac+rna_sea_bm_tcelldep.ipynb  atac+rna_tea_multiome_w1.R  atac+rna_tea_multiome_w2.R  combine_subsets.R  combine_unseen.R  convert_bm_label.ipynb  gen_dogma_continual.sh  merge_frags.sh  rna+adt_asap_cite_ctrl.R  rna+adt_asap_cite_stim.R  rna+adt_cite_bm.ipynb  rna+adt_wnn.R  rna_ica_bm.ipynb  split_mat.py  test.ipynb  utils.R
result/analysis/bm/: BM_lable_l1_l2.rds
scripts/: build_quickstart_demo.py
src/functions/: models.py
src/scMIDAS.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/scmidas/: __init__.py  api.py  config.py  data.py  datasets.py  evaluation.py  model.py  model_config.toml  models.py  nn.py  plot.py  sample.py  utils.py
src/scmidas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/scmidas/data/: quickstart_pbmc_mosaic.h5mu
src/scmiracle.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_invariants.py  test_new_api.py  test_nn.py  test_smoke.py  test_utils.py
utils/: utils.R
